Fixing routes for New User & New Location

--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -5,6 +5,14 @@
 	</head>
 	<body>
 		<h1>Fog App</h1>
+		<ul>
+			<li><a href="/users">Users</a></li>
+			<li><a href="/locations">Locations</a></li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/contact">Contact</a></li>
+			<li><a href="/users/new">New User</a></li>
+			<li><a href="/locations/new">New Location</a></li>
+		</ul>
 		
 	</body>
 </html>
