Adding forms to User & Location view files

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -5,6 +5,12 @@
 	</head>
 	<body>
 		<h1>Fog App | New User</h1>
-		
+		<form action="/users" method="POST">
+	        <input type="text" name="name" placeholder="Name">
+	        <input type="text" name="zip_code" placeholder="Zip Code"> 
+	        <input type="password" name="password" placeholder="Password">
+	        <button type="submit">Submit</button>
+    	</form>
+
 	</body>
 </html>
