--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -5,6 +5,10 @@
 	</head>
 	<body>
 		<h1>Fog App | New Location</h1>
+		<form action="/locations" method="POST">
+	        <input type="text" name="zip_code" placeholder="Zip Code">
+	        <button type="submit">Submit</button>
+    	</form>
 		
 	</body>
 </html>
