Add User model, update config.json db

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -6,10 +6,10 @@
 	<body>
 		<h1>Fog App | New User</h1>
 		<form action="/users" method="POST">
-	        <input type="text" name="name" placeholder="Name">
-	        <input type="text" name="zip_code" placeholder="Zip Code"> 
+	        <input type="text" name="email" placeholder="Email Address">
 	        <input type="password" name="password" placeholder="Password">
-	        <button type="submit">Submit</button>
+	        <input type="text" name="zip_code" placeholder="Zip Code"> 
+	        <button type="submit">Create Account</button>
     	</form>
 
 	</body>
