Fixed authentication & added login page

--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -12,6 +12,7 @@
 			<li><a href="/contact">Contact</a></li>
 			<li><a href="/users/new">New User</a></li>
 			<li><a href="/locations/new">New Location</a></li>
+			<li><a href="/site/login">Login</a></li>
 		</ul>
 		
 	</body>
