Fix index link, install, require, and use express-session

--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -5,5 +5,10 @@
 	</head>
 	<body>
 		<h1>Fog App | Login</h1>
+		<form action="/users/:id" method="POST">
+	        <input type="text" name="email" placeholder="Email Address">
+	        <input type="password" name="password" placeholder="Password">
+	        <button type="submit">Login</button>
+    	</form>
 	</body>
 </html>
