Fixing login & profile page

--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -5,9 +5,9 @@
 	</head>
 	<body>
 		<h1>Fog App | Login</h1>
-		<form action="/users/profile" method="POST">
-	        <input type="text" name="email" placeholder="Email Address">
-	        <input type="password" name="password" placeholder="Password">
+		<form action="/login" method="POST">
+	        <input type="text" name="user[email]" placeholder="Email Address">
+	        <input type="password" name="user[password]" placeholder="Password">
 	        <button type="submit">Login</button>
     	</form>
 	</body>
