Fixing location get & post routes

--- a/views/locations/location.ejs
+++ b/views/locations/location.ejs
@@ -5,6 +5,12 @@
 	</head>
 	<body>
 		<h1>Fog App | Location</h1>
-		
+		<div>
+			<ul>
+				<li><%= zip %></li>
+				<li><%= lat %></li>
+				<li><%= lon %></li>
+			</ul>
+		</div>
 	</body>
 </html>
