--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -6,7 +6,7 @@
 	<body>
 		<h1>Fog App | New Location</h1>
 		<form action="/locations" method="POST">
-	        <input type="text" name="zip_code" placeholder="Zip Code">
+	        <input type="text" name="zip" placeholder="Zip Code">
 	        <button type="submit">Submit</button>
     	</form>
 		
