--- a/views/site/search.ejs
+++ b/views/site/search.ejs
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h1>Fog App | Search Locations</h1>
-		<form action="/search" method="GET">
+		<form action="/search" method="POST">
 	        <input type="text" name="zip" placeholder="Zip Code">
 	        <button type="submit">Search</button>
     	</form>
