--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -7,6 +7,8 @@
 		<h1>Fog App | Profile</h1>
 
 		Welcome, <%= user.email  %>!
+		<br>
+		<a href="/locations/new">Add new location</a>
 		
 	</body>
 </html>
