Making locations list work

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -8,7 +8,7 @@
 		<form action="/users" method="POST">
 	        <input type="text" name="email" placeholder="Email Address">
 	        <input type="password" name="password" placeholder="Password">
-	        <input type="text" name="zip" placeholder="Zip Code"> 
+	        <!-- <input type="text" name="zip" placeholder="Zip Code"> -->
 	        <button type="submit">Create Account</button>
     	</form>
 
