--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -5,8 +5,15 @@
 	</head>
 	<body>
 		<h1>Fog App | Locations</h1>
-		
-	
+		<% for (var i = 0; i < zipList.length; i++) { %>
+		<div>
+			Zip Code: <a href="/locations<%= zipList.id %>"><%= zipList[i].zip %></a>
+			<br>
+			Latitude: <%= zipList[i].lat %>
+			<br>
+			Longitude: <%= zipList[i].long %>
+		</div>
+		<% } %>
 		
 	</body>
 </html>
