Making locations/location work

--- a/views/locations/location.ejs
+++ b/views/locations/location.ejs
@@ -6,10 +6,10 @@
 	<body>
 		<h1>Fog App | Location</h1>
 		<div>
+		Zip Code: <%= id.zip %>
 			<ul>
-				<li><%= zip %></li>
-				<li><%= lat %></li>
-				<li><%= lon %></li>
+				<li>Latitude: <%= id.lat %></li>
+				<li>Longitude: <%= id.long %></li>
 			</ul>
 		</div>
 	</body>
