--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -7,7 +7,7 @@
 		<h1>Fog App | Locations</h1>
 		<% for (var i = 0; i < zipList.length; i++) { %>
 		<div>
-			Zip Code: <a href="/locations<%= zipList.id %>"><%= zipList[i].zip %></a>
+			Zip Code: <a href="/locations/<%= zipList[i].id %>"><%= zipList[i].zip %></a>
 			<br>
 			Latitude: <%= zipList[i].lat %>
 			<br>
