Creating partial views

--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>Fog App</title>
+		<title>Cloud App</title>
 		
 	</head>
 	<body>
-		<h1>Fog App | Locations</h1>
+		<h1>Cloud App | Locations</h1>
 		<% for (var i = 0; i < zipList.length; i++) { %>
 		<div>
 			Zip Code: <a href="/locations/<%= zipList[i].id %>"><%= zipList[i].zip %></a>
