--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -1,16 +1,22 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Fog App | Index</title>
-		
+		<% include ../partials/head %>
 	</head>
 	<body>
-		<h1>Fog App</h1>
+		<header>
+			<% include ../partials/header %>
+		</header>
+		<h1>Cloud App</h1>
 		<ul>
 			<li><a href="/users/new">New User</a></li>
 			<li><a href="/login">Login</a></li>
 			<li><a href="/about">About</a></li>
 			<li><a href="/contact">Contact</a></li>
 		</ul>
+		<footer>
+			<% include ../partials/footer %>
+		</footer>
 		
 	</body>
 </html>
