--- a/views/site/search.ejs
+++ b/views/site/search.ejs
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>Fog App | Search</title>
+		<title>Cloud App | Search</title>
 		
 	</head>
 	<body>
-		<h1>Fog App | Search Locations</h1>
+		<h1>Cloud App | Search Locations</h1>
 		<form action="/search" method="POST">
 	        <input type="text" name="zip" placeholder="Zip Code">
 	        <button type="submit">Search</button>
