--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>Fog App</title>
+		<title>Cloud App</title>
 		
 	</head>
 	<body>
-		<h1>Fog App | New User</h1>
+		<h1>Cloud App | New User</h1>
 		<form action="/users" method="POST">
 	        <input type="text" name="email" placeholder="Email Address">
 	        <input type="password" name="password" placeholder="Password">
