--- a/views/locations/location.ejs
+++ b/views/locations/location.ejs
@@ -1,19 +1,20 @@
 <html>
 	<head>
-		<title>Fog App</title>
+		<title>Cloud App</title>
+		<link rel="stylesheet" href="/css/style.css">
 		
 	</head>
 	<body>
-		<h1>Fog App | Location</h1>
+		<h1>Cloud App | Location</h1>
 		<div>
 		Zip Code: <%= id.zip %>
 			<ul>
 				<li>Latitude: <%= id.lat %></li>
 				<li>Longitude: <%= id.long %></li>
-				<div id="cloud">
-					<%= results.currently.cloudCover %>
-				</div>
+				<li>Cloud Cover:</li>
 			</ul>
+
+			<div><p id="cloud"><%= results.currently.cloudCover %></p></div>
 		</div>
 		<script src="/js/style.js"></script>
 	</body>
