--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>Fog App</title>
+		<title>Cloud App</title>
 		
 	</head>
 	<body>
-		<h1>Fog App | New Location</h1>
+		<h1>Cloud App | New Location</h1>
 		<form action="/locations" method="POST">
 	        <input type="text" name="zip" placeholder="Zip Code">
 	        <button type="submit">Submit</button>
