--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -1,10 +1,14 @@
 <html>
 	<head>
-		<title>Fog App</title>
-		
+		<% include ../partials/head %>
 	</head>
 	<body>
-		<h1>Fog App | About</h1>
-		
+	<header>
+			<% include ../partials/header %>
+		</header>
+		<h1>Cloud App | About</h1>
+		<footer>
+			<% include ../partials/footer %>
+		</footer>
 	</body>
 </html>
