--- a/views/site/contact.ejs
+++ b/views/site/contact.ejs
@@ -1,10 +1,15 @@
 <html>
 	<head>
-		<title>Fog App</title>
-		
+		<% include ../partials/head %>
 	</head>
 	<body>
-		<h1>Fog App | Contact</h1>
+		<header>
+			<% include ../partials/header %>
+		</header>
+		<h1>Cloud App | Contact</h1>
+		<footer>
+			<% include ../partials/footer %>
+		</footer>
 		
 	</body>
 </html>
