--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>Fog App | Login</title>
+		<title>Cloud App | Login</title>
 		
 	</head>
 	<body>
-		<h1>Fog App | Login</h1>
+		<h1>Cloud App | Login</h1>
 		<form action="/login" method="POST">
 	        <input type="text" name="user[email]" placeholder="Email Address">
 	        <input type="password" name="user[password]" placeholder="Password">
