--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>Fog App</title>
+		<title>Cloud App</title>
 		
 	</head>
 	<body>
-		<h1>Fog App | Users</h1>
+		<h1>Cloud App | Users</h1>
 		
 	</body>
 </html>
