--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,10 +1,14 @@
 <html>
 	<head>
-		<title>Cloud App</title>
-		
+		<% include ../partials/head %>
 	</head>
 	<body>
+		<header>
+			<% include ../partials/header %>
+		</header>
 		<h1>Cloud App | Users</h1>
-		
+		<footer>
+			<% include ../partials/footer %>
+		</footer>
 	</body>
 </html>
