--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -1,14 +1,19 @@
 <html>
 	<head>
-		<title>Cloud App</title>
-		
+		<% include ../partials/head %>
 	</head>
 	<body>
+		<header>
+			<% include ../partials/header %>
+		</header>
 		<h1>Cloud App | New Location</h1>
 		<form action="/locations" method="POST">
 	        <input type="text" name="zip" placeholder="Zip Code">
 	        <button type="submit">Submit</button>
     	</form>
+    	<footer>
+			<% include ../partials/footer %>
+		</footer>
 		
 	</body>
 </html>
