--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -1,14 +1,19 @@
 <html>
 	<head>
-		<title>Cloud App | Login</title>
-		
+		<% include ../partials/head %>
 	</head>
 	<body>
+		<header>
+			<% include ../partials/header %>
+		</header>
 		<h1>Cloud App | Login</h1>
 		<form action="/login" method="POST">
 	        <input type="text" name="user[email]" placeholder="Email Address">
 	        <input type="password" name="user[password]" placeholder="Password">
 	        <button type="submit">Login</button>
     	</form>
+    	<footer>
+			<% include ../partials/footer %>
+		</footer>
 	</body>
 </html>
