--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,9 +1,11 @@
 <html>
 	<head>
-		<title>Cloud App</title>
-		
+		<% include ../partials/head %>
 	</head>
 	<body>
+		<header>
+			<% include ../partials/header %>
+		</header>
 		<h1>Cloud App | New User</h1>
 		<form action="/users" method="POST">
 	        <input type="text" name="email" placeholder="Email Address">
@@ -11,6 +13,8 @@
 	        <!-- <input type="text" name="zip" placeholder="Zip Code"> -->
 	        <button type="submit">Create Account</button>
     	</form>
-
+    	<footer>
+			<% include ../partials/footer %>
+		</footer>
 	</body>
 </html>
