Updating text across ejs files

--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -6,7 +6,7 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Cloud App | Locations</h1>
+		<h1>Locations</h1>
 		<% for (var i = 0; i < zipList.length; i++) { %>
 		<div>
 			Zip Code: <a href="/locations/<%= zipList[i].id %>"><%= zipList[i].zip %></a>
