--- a/views/locations/location.ejs
+++ b/views/locations/location.ejs
@@ -7,7 +7,7 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Cloud App | Location</h1>
+		<h1>Location</h1>
 		<div>
 		Zip Code: <%= id.zip %>
 			<ul>
