--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -6,7 +6,7 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Cloud App | New Location</h1>
+		<h1>New Location</h1>
 		<form action="/locations" method="POST">
 	        <input type="text" name="zip" placeholder="Zip Code">
 	        <button type="submit">Submit</button>
