--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,11 +4,10 @@
     <div class="container-fluid">
 
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Cloud App</a>
+            <a class="navbar-brand" href="/">What the Fog?</a>
         </div>
 
         <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
