--- a/views/site/contact.ejs
+++ b/views/site/contact.ejs
@@ -6,7 +6,7 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Cloud App | Contact</h1>
+		<h1>Contact</h1>
 		<footer>
 			<% include ../partials/footer %>
 		</footer>
