--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -6,7 +6,7 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Cloud App | Login</h1>
+		<h1>Login</h1>
 		<form action="/login" method="POST">
 	        <input type="text" name="user[email]" placeholder="Email Address">
 	        <input type="password" name="user[password]" placeholder="Password">
