--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -6,7 +6,7 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Cloud App | Users</h1>
+		<h1>Users</h1>
 		<footer>
 			<% include ../partials/footer %>
 		</footer>
