--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -6,7 +6,7 @@
 	<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Cloud App | About</h1>
+		<h1>About</h1>
 		<footer>
 			<% include ../partials/footer %>
 		</footer>
