--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -7,7 +7,7 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Cloud App</h1>
+		<h1>Index</h1>
 		<ul>
 			<li><a href="/users/new">New User</a></li>
 			<li><a href="/login">Login</a></li>
