--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -6,7 +6,7 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Cloud App | Profile</h1>
+		<h1>Profile</h1>
 
 		Welcome, <%= user.email  %>!
 		<br>
