--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <div class="container-fluid">
 
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">What the Fog?</a>
+            <a class="navbar-brand" href="/">What the Cloud?</a>
         </div>
 
         <ul class="nav navbar-nav">
