--- a/views/locations/location.ejs
+++ b/views/locations/location.ejs
@@ -2,6 +2,23 @@
 	<head>
 		<% include ../partials/head %>
 		<link rel="stylesheet" href="/css/style.css">
+		<script>
+
+		function isFoggy(temp, dewPoint) {
+     		if (temp > dewPoint) {
+     			if (temp - dewPoint <= 4) {
+     				return true;
+     			} else if (dewPoint - temp <= 4) {
+     				return true;
+     			}
+     		} else {
+     			return false;
+     		}
+     	}
+
+     	isFoggy(results.currently.temperature, results.currently.dewPoint);
+
+		</script>
 	</head>
 	<body>
 		<header>
@@ -18,6 +35,7 @@
 				<li>Cloud Cover:
 					<div><p id="cloud"><%= results.currently.cloudCover %></p></div>
 					</div>
+					<div id="fog">nbsp;</div>
 				</li>
 			</ul>
 
