Adding cloud logic

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,8 +9,9 @@
 	padding-top: 50px;
 }
 
-#fog {
+/*#fog {
 	width: 200px;
 	height: 200px;
 	border-radius: 100%;
-}
+	background-color: grey;
+}*/
