--- a/views/locations/location.ejs
+++ b/views/locations/location.ejs
@@ -35,9 +35,10 @@
 				<li>Cloud Cover:
 					<div><p id="cloud"><%= results.currently.cloudCover %></p></div>
 					</div>
-					<div id="fog">nbsp;</div>
 				</li>
 			</ul>
+			<div><h3>Foggy?<p id="fog"></p></h3></div>
+			<div><h3>Cloudy?<p id="cloudy"></p></h3></div>
 
 			
 		<footer>
