--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/head.ejs -->
 
 <meta charset="UTF-8">
-<title>What the Cloud?</title>
+<title>What the Fog?</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
