--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <!-- views/partials/footer.ejs -->
 
-<p class="text-center text-muted">© Copyright 2015 Jane Philipps</p>
+<p class="text-center text-muted">Coded by Jane Philipps</p>
