--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,12 @@
         </div>
 
         <ul class="nav navbar-nav">
+            <li><a href="/user/new">Sign Up</a></li>
+            <li><a href="/login">Log In</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
+            
+
         </ul>
       
     </div>
