--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -7,13 +7,10 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Index</h1>
-		<ul>
-			<li><a href="/users/new">New User</a></li>
-			<li><a href="/login">Login</a></li>
-			<li><a href="/about">About</a></li>
-			<li><a href="/contact">Contact</a></li>
-		</ul>
+		<h1>Welcome!</h1>
+		<p>What the Fog? is a simple web app that lets you check the fog conditions in your area by zip code. To get started, <a href="/users/new">sign up</a> for an account.</p>
+		<p>Why fog? Check out our <a href="/about">about</a> page.</p>
+		<p>Looking for my contact info? Check out the <a href="/contact">contact</a> page.</p>
 		<footer>
 			<% include ../partials/footer %>
 		</footer>
