--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -6,11 +6,11 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Login</h1>
+		<h1>Log In</h1>
 		<form action="/login" method="POST">
 	        <input type="text" name="user[email]" placeholder="Email Address">
 	        <input type="password" name="user[password]" placeholder="Password">
-	        <button type="submit">Login</button>
+	        <button type="submit">Log In</button>
     	</form>
     	<footer>
 			<% include ../partials/footer %>
