--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -6,7 +6,7 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>New User</h1>
+		<h1>Sign Up</h1>
 		<form action="/users" method="POST">
 	        <input type="text" name="email" placeholder="Email Address">
 	        <input type="password" name="password" placeholder="Password">
