Site navigation additions & changes

--- a/views/locations/location.ejs
+++ b/views/locations/location.ejs
@@ -24,9 +24,10 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Location</h1>
+		<a href="/profile">Back to Profile</a>
+		<h1>Zip Code: <%= id.zip %></h1>
 		<div>
-		Zip Code: <%= id.zip %>
+		
 			<ul>
 				<li>Latitude: <%= id.lat %></li>
 				<li>Longitude: <%= id.long %></li>
