--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -6,7 +6,8 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>New Location</h1>
+		<a href="/profile">Back to Profile</a>
+		<h1>Add Location</h1>
 		<form action="/locations" method="POST">
 	        <input type="text" name="zip" placeholder="Zip Code">
 	        <button type="submit">Submit</button>
