--- a/views/site/contact.ejs
+++ b/views/site/contact.ejs
@@ -7,6 +7,11 @@
 			<% include ../partials/header %>
 		</header>
 		<h1>Contact</h1>
+		<ul>
+			<li><a href="mailto:jane.philipps@gmail.com">Email</a></li>
+			<li><a href="https://twitter.com/janephilipps" target="_blank">Twitter</a></li>
+			<li><a href="https://instagram.com/janephilipps/" target="_blank">Instagram</a></li>
+		</ul>
 		<footer>
 			<% include ../partials/footer %>
 		</footer>
