--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -9,7 +9,7 @@
 		</header>
 		<h1>Welcome!</h1>
 		<p>What the Fog? is a simple web app that lets you check the fog conditions in your area by zip code. To get started, <a href="/users/new">sign up</a> for an account.</p>
-		<p>Why fog? Check out our <a href="/about">about</a> page.</p>
+		<p>Why fog? Check out the <a href="/about">about</a> page.</p>
 		<p>Looking for my contact info? Check out the <a href="/contact">contact</a> page.</p>
 		<footer>
 			<% include ../partials/footer %>
