--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -8,12 +8,21 @@
 		</header>
 		<h1>Profile</h1>
 
-		Welcome, <%= user.email  %>!
-		<br>
-		<a href="/locations">Your saved locations</a>
-		<br>
+		<p>Welcome, <%= user.email  %>!</p>
+		<p>Your User Id is: <%= userId %></p>
+		<!-- <a href="/locations">Your saved locations</a>
+		<br> -->
+		
+		<p>Your Saved Locations:</p>
+        <% for (var i = 0; i < locationsList.length; i++) { %>
+        <div>
+            Zip Code: <a href="/locations/<%= locationsList[i].id %>"><%= locationsList[i].zip %></a>
+        </div>
+        <% } %>
+        <br>
 		<a href="/locations/new">Add new location</a>
-
+		<br>
+		<br>
 		<form action="/logout?_method=DELETE" method="POST">
 	        <button type="submit">Logout</button>
     	</form>
