Adding additional style file

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,3 +5,4 @@
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/typography.css">
