--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -1,3 +1,12 @@
 body {
 	font-family: Futura;
 }
+
+@media (max-width: 400px) {
+	body {
+		text-align: center;
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+
+}
