--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -7,7 +7,7 @@
 			<% include ../partials/header %>
 		</header>
 		<h1>About</h1>
-		<div>
+		<div id="about">
 		<p>I'm a native Bay Arean who loves fog, so I made this app.</p>
 		<p>Credit to this <a href="http://en.wikipedia.org/wiki/Fog" target="_blank">Wikipedia article</a> and this <a href="http://www.wxforum.net/index.php?topic=11861.0" target="_blank">forum post</a> for helping me create my "Fogarithm".</p>
 		<br>
@@ -23,8 +23,8 @@
      		} else {
      			return false;
      		}
-     	}
-     	</div> -->
+     	} -->
+     	</div>
 		<footer>
 			<% include ../partials/footer %>
 		</footer>
