--- a/views/site/login.ejs
+++ b/views/site/login.ejs
@@ -6,12 +6,14 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Log In</h1>
-		<form action="/login" method="POST">
-	        <input type="text" name="user[email]" placeholder="Email Address">
-	        <input type="password" name="user[password]" placeholder="Password">
-	        <button type="submit">Log In</button>
-    	</form>
+		<div class="page-wrap">
+			<h1>Log In</h1>
+			<form action="/login" method="POST">
+		        <input type="text" name="user[email]" placeholder="Email Address">
+		        <input type="password" name="user[password]" placeholder="Password">
+		        <button type="submit">Log In</button>
+	    	</form>
+	    </div>
     	<footer>
 			<% include ../partials/footer %>
 		</footer>
