--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -1,6 +1,27 @@
+* {
+  margin: 0;
+}
+html, body {
+  height: 100%;
+}
+
 body {
 	font-family: Futura;
 	background-color: darkgrey
+}
+
+.page-wrap {
+	min-height: 100%;
+  	/* equal to footer height */
+  	margin-bottom: -142px;
+}
+
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+footer, .page-wrap:after {
+  height: 142px; 
 }
 
 a {
@@ -34,6 +55,11 @@ footer {
 footer a {
 	color: black;
 }
+
+
+
+
+
 
 /* MOBILE STYLES */
 
