--- a/views/site/contact.ejs
+++ b/views/site/contact.ejs
@@ -6,11 +6,13 @@
 		<header>
 			<% include ../partials/header %>
 		</header>
-		<h1>Contact</h1>
-		<a class="contact" href="mailto:jane.philipps@gmail.com">Email</a>
-		<a class="contact" href="https://twitter.com/janephilipps" target="_blank">Twitter</a>
-		<a class="contact" href="https://instagram.com/janephilipps/" target="_blank">Instagram</a>
-		<br>
+		<div class="page-wrap">
+			<h1>Contact</h1>
+			<a class="contact" href="mailto:jane.philipps@gmail.com">Email</a>
+			<a class="contact" href="https://twitter.com/janephilipps" target="_blank">Twitter</a>
+			<a class="contact" href="https://instagram.com/janephilipps/" target="_blank">Instagram</a>
+			<br>
+		</div>
 		<footer>
 			<% include ../partials/footer %>
 		</footer>
