--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -7,25 +7,27 @@
 			<% include ../partials/header %>
 		</header>
 		<div class="page-wrap">
-			<h1>About</h1>
-			<div id="about">
-			<p>I'm a native Bay Arean who loves fog, so I made this app.</p>
-			<p>Credit to this <a href="http://en.wikipedia.org/wiki/Fog" target="_blank">Wikipedia article</a> and this <a href="http://www.wxforum.net/index.php?topic=11861.0" target="_blank">forum post</a> for helping me create my "Fogarithm".</p>
-			<br>
+			<div class="container">
+				<h1>About</h1>
+				<div id="about">
+				<p>I'm a native Bay Arean who loves fog, so I made this app.</p>
+				<p>Credit to this <a href="http://en.wikipedia.org/wiki/Fog" target="_blank">Wikipedia article</a> and this <a href="http://www.wxforum.net/index.php?topic=11861.0" target="_blank">forum post</a> for helping me create my "Fogarithm".</p>
+				<br>
 
-			<!-- <div>
-			function isFoggy(temp, dewPoint, visibility) {
-	     		if (visibility < 1) {
-	     			if (temp - dewPoint <= 4) {
-	     				return true;
-	     			} else if (dewPoint - temp <= 4) {
-	     				return true;
-	     			}
-	     		} else {
-	     			return false;
-	     		}
-	     	} -->
-	     	</div>
+				<!-- <div>
+				function isFoggy(temp, dewPoint, visibility) {
+		     		if (visibility < 1) {
+		     			if (temp - dewPoint <= 4) {
+		     				return true;
+		     			} else if (dewPoint - temp <= 4) {
+		     				return true;
+		     			}
+		     		} else {
+		     			return false;
+		     		}
+		     	} -->
+		     	</div>
+		     </div>
 	     </div>
 		<footer>
 			<% include ../partials/footer %>
