--- a/views/site/contact.ejs
+++ b/views/site/contact.ejs
@@ -7,11 +7,13 @@
 			<% include ../partials/header %>
 		</header>
 		<div class="page-wrap">
-			<h1>Contact</h1>
-			<a class="contact" href="mailto:jane.philipps@gmail.com">Email</a>
-			<a class="contact" href="https://twitter.com/janephilipps" target="_blank">Twitter</a>
-			<a class="contact" href="https://instagram.com/janephilipps/" target="_blank">Instagram</a>
-			<br>
+			<div class="container">
+				<h1>Contact</h1>
+				<a class="contact" href="mailto:jane.philipps@gmail.com">Email</a>
+				<a class="contact" href="https://twitter.com/janephilipps" target="_blank">Twitter</a>
+				<a class="contact" href="https://instagram.com/janephilipps/" target="_blank">Instagram</a>
+				<br>
+			</div>
 		</div>
 		<footer>
 			<% include ../partials/footer %>
