--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -7,27 +7,30 @@
 			<% include ../partials/header %>
 		</header>
 		<div class="container">
-			<h1>Profile</h1>
+			<div class="page-wrap">
 
-			<p>Welcome, <%= user.email  %>!</p>
-			<p>Your User Id is: <%= userId %></p>
-			<!-- <a href="/locations">Your saved locations</a>
-			<br> -->
-			
-			<p>Your Saved Locations:</p>
-	        <% for (var i = 0; i < locationsList.length; i++) { %>
-	        <div>
-	            Zip Code: <a href="/locations/<%= locationsList[i].id %>"><%= locationsList[i].zip %></a>
-	        </div>
-	        <% } %>
-	        <br>
-			<a href="/locations/new">Add new location</a>
-			<br>
-			<br>
-			<form action="/logout?_method=DELETE" method="POST">
-		        <button type="submit">Logout</button>
-	    	</form>
-	    	<br>
+				<h1>Profile</h1>
+
+				<p>Welcome, <%= user.email  %>!</p>
+				<p>Your User Id is: <%= userId %></p>
+				<!-- <a href="/locations">Your saved locations</a>
+				<br> -->
+				
+				<p>Your Saved Locations:</p>
+		        <% for (var i = 0; i < locationsList.length; i++) { %>
+		        <div>
+		            Zip Code: <a href="/locations/<%= locationsList[i].id %>"><%= locationsList[i].zip %></a>
+		        </div>
+		        <% } %>
+		        <br>
+				<a href="/locations/new">Add new location</a>
+				<br>
+				<br>
+				<form action="/logout?_method=DELETE" method="POST">
+			        <button type="submit">Logout</button>
+		    	</form>
+		    	<br>
+		    </div>
 	    </div>
     	<footer>
 			<% include ../partials/footer %>
