--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -10,9 +10,9 @@
 			<div class="container">
 				<h1>About</h1>
 				<div id="about">
-				<p>I'm a native Bay Arean who loves fog, so I made this app.</p>
+				<p>I'm a Bay Area native who loves fog, so I made this app.</p>
 				<p>Credit to this <a href="http://en.wikipedia.org/wiki/Fog" target="_blank">Wikipedia article</a> and this <a href="http://www.wxforum.net/index.php?topic=11861.0" target="_blank">forum post</a> for helping me create my "Fogarithm".</p>
-				<br>
+				<p>Inspired by <a href="https://twitter.com/karlthefog">@karlthefog</a>.</p>
 
 				<!-- <div>
 				function isFoggy(temp, dewPoint, visibility) {
