Adding content to about page

--- a/views/site/about.ejs
+++ b/views/site/about.ejs
@@ -10,7 +10,7 @@
 			<div class="container">
 				<h1>About</h1>
 				<div id="about">
-				<p>I'm a Bay Area native who loves fog, so I made this app.</p>
+				<p>I'm a Bay Area native who loves fog, so I made this app using the <a href="http://openweathermap.org/">Open Weather Map API</a> and the <a href="http://forecast.io/">Forecast.io API</a>.</p>
 				<p>Credit to this <a href="http://en.wikipedia.org/wiki/Fog" target="_blank">Wikipedia article</a> and this <a href="http://www.wxforum.net/index.php?topic=11861.0" target="_blank">forum post</a> for helping me create my "Fogarithm".</p>
 				<p>Inspired by <a href="https://twitter.com/karlthefog">@karlthefog</a>.</p>
 
