--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -8,10 +8,13 @@
 			<% include ../partials/header %>
 		</header>
 		<div class="page-wrap">
-			<h1>Welcome!</h1>
-			<p>What the Fog? is a simple web app that lets you check fog and cloud conditions by zip code. To get started, <a href="/users/new">sign up</a> for an account.</p>
-			<p>Why fog? Check out the <a href="/about">about</a> page.</p>
-			<p>Looking for my contact info? Check out the <a href="/contact">contact</a> page.</p>
+			<div class="container">
+
+				<h1>Welcome!</h1>
+				<p>What the Fog? is a simple web app that lets you check fog and cloud conditions by zip code. To get started, <a href="/users/new">sign up</a> for an account.</p>
+				<p>Why fog? Check out the <a href="/about">about</a> page.</p>
+				<p>Looking for my contact info? Check out the <a href="/contact">contact</a> page.</p>
+			</div>
 		</div>
 		<footer>
 			<% include ../partials/footer %>
