--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <title>What the Fog?</title>
 
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/typography.css">
