--- a/views/locations/location.ejs
+++ b/views/locations/location.ejs
@@ -42,8 +42,8 @@
 				<div class=".col-xs-4 .col-sm-4"></div>
 			</row>
 
-			<div><h3>Foggy?<p id="fog"></p></h3></div>
-			<div><h3>Cloudy?<p id="cloudy"></p></h3></div>
+			<div><h3 class="white">Foggy?</h3><p id="fog"></p></div>
+			<div><h3 class="white">Cloudy?</h3><p id="cloudy"></p></div>
 		</div>
 	</div>
 			
