--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -8,13 +8,24 @@
 		</header>
 		<div class="page-wrap">
 			<div class="container">
+				<!-- If an error occurs -->
+                <% if (err) {
 
+                    err.forEach(function(errorMessage) {
+
+                %>
+
+                    <div class="error"><%= errorMessage %></div>
+
+                <% }); // Ends the forEach loop
+                } // Ends the if statement
+                %>
 				<h1>Sign Up</h1>
 				<form action="/users" method="POST">
 			        <input type="text" name="email" placeholder="Email Address">
 			        <input type="password" name="password" placeholder="Password">
 			        <!-- <input type="text" name="zip" placeholder="Zip Code"> -->
-			        <button type="submit">Create Account</button>
+			        <button type="submit">Sign Up</button>
 		    	</form>
 		    	<br>
 		    </div>
