--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -11,7 +11,7 @@
 			<div class="container">
 
 				<h1>Welcome!</h1>
-				<p>What the Fog? is a simple web app that lets you check fog and cloud conditions by zip code. To get started, <a href="/users/new">sign up</a> for an account.</p>
+				<p>What the Fog? is a simple web app that lets you check fog and cloud conditions by zip code. To get started, <a href="/signup">sign up</a> for an account.</p>
 				<p>Why fog? Check out the <a href="/about">about</a> page.</p>
 				<p>Looking for my contact info? Check out the <a href="/contact">contact</a> page.</p>
 			</div>
