Minor design changes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,7 @@
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/login">Log In</a></li>
         <% } else { %>
+            <li><a href="/profile">Profile</a></li>
             <li><a href="/logout">Log Out</a></li>
         <% } %>
             <li><a href="/about">About</a></li>
