--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -13,7 +13,7 @@
 				<h1>Profile</h1>
 
 				<p>Welcome, <%= user.email  %>!</p>
-				<p>Your User Id is: <%= userId %></p>
+				<!-- <p>Your User Id is: <%= userId %></p> -->
 				<!-- <a href="/locations">Your saved locations</a>
 				<br> -->
 
